--- a/SBlogA/packages.config
+++ b/SBlogA/packages.config
@@ -4,7 +4,9 @@
   <package id="bootstrap" version="3.0.0" targetFramework="net451" />
   <package id="FluentMigrator" version="1.6.2" targetFramework="net451" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net451" />
-  <package id="jQuery" version="1.10.2" targetFramework="net451" />
+  <package id="jQuery" version="2.0.3" targetFramework="net451" />
+  <package id="jQuery.Validation" version="1.17.0" targetFramework="net451" />
+  <package id="jQuery.Validation.Unobtrusive" version="2.0.20710.0" targetFramework="net451" />
   <package id="JSAndCSSBundling" version="1.0.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc.tr" version="5.2.4" targetFramework="net451" />
@@ -14,6 +16,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages.tr" version="3.2.4" targetFramework="net451" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net451" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="2.0.20710.0" targetFramework="net451" />
   <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net451" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Microsoft.Web.Optimization" version="0.1" targetFramework="net451" />
